--- a/goaccess/goaccess.conf
+++ b/goaccess/goaccess.conf
@@ -11,20 +11,20 @@ Listen 0.0.0.0:8082
     Require valid-user
 </VirtualHost>
 
-# Définition du fichier log (modifier selon l'emplacement réel du fichier de log)
-log-file /var/log/nginx/access.log
+# # Définition du fichier log (modifier selon l'emplacement réel du fichier de log)
+# log-file /var/log/nginx/access.log
 
-# Format des logs de Nginx (Assure-toi que ton format de log correspond à celui utilisé par GoAccess)
-log-format COMBINED
+# # Format des logs de Nginx (Assure-toi que ton format de log correspond à celui utilisé par GoAccess)
+# log-format COMBINED
 
-# Répertoire où GoAccess va générer les rapports
-output-dir /var/www/html/stats
+# # Répertoire où GoAccess va générer les rapports
+# output-dir /var/www/html/stats
 
-# Activation du mode en temps réel
-real-time-mode true
+# # Activation du mode en temps réel
+# real-time-mode true
 
-# Fichier HTML de sortie pour les rapports GoAccess
-html-report /var/www/html/stats/
+# # Fichier HTML de sortie pour les rapports GoAccess
+# html-report /var/www/html/stats/
 
-# Cette option permet de lancer GoAccess en mode démon pour générer les rapports en arrière-plan
-daemonize true
+# # Cette option permet de lancer GoAccess en mode démon pour générer les rapports en arrière-plan
+# daemonize true
