--- a/goaccess/goaccess.conf
+++ b/goaccess/goaccess.conf
@@ -1,30 +1,11 @@
-# Fichier de configuration GoAccess
-Listen 0.0.0.0:8082
+# Format des logs de Nginx
+log-format COMBINED
 
-<VirtualHost *:8082>
-    DocumentRoot /var/www/html/stats
-    DirectoryIndex index.html
-    # Auth configuration
-    AuthType Basic
-    AuthName "Restricted"
-    AuthUserFile /etc/apache2/.htpasswd
-    Require valid-user
-</VirtualHost>
+# Fichier de log à analyser
+log-file /var/log/nginx/access.log
 
-# # Définition du fichier log (modifier selon l'emplacement réel du fichier de log)
-# log-file /var/log/nginx/access.log
+# Fichier HTML de sortie pour les rapport
+output /var/www/html/stats/index.html
 
-# # Format des logs de Nginx (Assure-toi que ton format de log correspond à celui utilisé par GoAccess)
-# log-format COMBINED
-
-# # Répertoire où GoAccess va générer les rapports
-# output-dir /var/www/html/stats
-
-# # Activation du mode en temps réel
-# real-time-mode true
-
-# # Fichier HTML de sortie pour les rapports GoAccess
-# html-report /var/www/html/stats/
-
-# # Cette option permet de lancer GoAccess en mode démon pour générer les rapports en arrière-plan
-# daemonize true
+# Lancer GoAccess en mode démon
+daemonize true
