--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     ports:
       - "8081:80"
     volumes:
-      - shared-logs:/var/log/nginx  
+      - shared-logs:/var/log/nginx
+      - nginx-config:/etc/nginx
     networks:
       - goaccess_net
     restart: always
@@ -33,12 +34,14 @@ services:
     ports:
       - "8082:80"
     volumes:
-      - shared-logs:/var/log/nginx  
+      - shared-logs:/var/log/nginx
+      - goaccess-reports:/var/www/html/stats
+      - apache-config:/etc/apache2
     networks:
       - goaccess_net
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost"]
+      test: ["CMD-SHELL", "curl -f -u admin:admin http://localhost/ || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -55,6 +58,12 @@ services:
 volumes:
   shared-logs:
     name: nginx-goaccess-logs
+  goaccess-reports:
+    name: goaccess-reports
+  nginx-config:
+    name: nginx-config
+  apache-config:
+    name: apache-config
 
 networks:
   goaccess_net:
