--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,23 +1,29 @@
 events {}
 
 http {
-    access_log /var/log/nginx/access.log;
+    access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
+    error_log /var/log/nginx/error.log warn;
 
     server {
         listen 80;
         server_name localhost;
 
         location / {
-            proxy_pass http://host.docker.internal:8082;
-
-            #proxy_pass http://goaccess_viewer:8082;
+            proxy_pass http://goaccess_viewer:80/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_connect_timeout 300s;
-        proxy_send_timeout 300s;
-        proxy_read_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
+            access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
+        }
+
+        location /welcome {
+            return 200 'Welcome to Nginx!';
+            add_header Content-Type text/plain;
+            access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
         }
     }
 }
